tests/src/frontend/typechecking/invalid/variance_use_3.sk
class Foo<-T> uses Bar<T> {}
trait Bar<+T>{}
